--- a/app/views/projects/_facet_list.html.erb
+++ b/app/views/projects/_facet_list.html.erb
@@ -1,20 +1,24 @@
-<% if params[f[:sym]].blank? %>
-	<li class='facet-header'> 
-		<%= link_to_function f[:name], "$(this).parent().next().slideToggle()"  %> (<%= @search.facet(f[:sym]).rows.length %>)
-	</li>
-	<ul class='facet-list'>
-		<% for row in @search.facet(f[:sym]).rows.sort!{|a,b| a.value <=> b.value} %>
-			<li class='facet-list-item'>
-				<% if params[f[:sym]].blank? %>
-					<%= link_to row.value, "#{current_url}#{joiner}#{f[:sym].to_s.gsub(/\s/, '_')}=#{CGI.escape row.value}" %> (<%= row.count %>)
-				<% else %>
-					<b><%= row.value %></b> (<%= link_to "remove", "#{current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
-				<% end %>
-			</li>
-		<% end %>
-	</ul>
-<% else %>
-	<li class='facet-header'> 
-		<b><%= f[:name] %>:</b> <%= @search.facet(f[:sym]).rows[0].value %> (<%= link_to "remove", "#{current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
-	</li>
-<% end %> 
+<% if f[:name]!="" %>
+	<% if params[f[:sym]].blank? %>
+		<li class='facet-header'> 
+			<%= link_to_function f[:name], "$(this).parent().next().slideToggle()"  %> (<%= @search.facet(f[:sym]).rows.length %>)
+		</li>
+		<ul class='facet-list'>
+			<% for row in @search.facet(f[:sym]).rows.sort!{|a,b| a.value <=> b.value} %>
+				
+					<li class='facet-list-item'>
+						<% if params[f[:sym]].blank? %>
+							<%= link_to row.value, "#{current_url}#{joiner}#{f[:sym].to_s.gsub(/\s/, '_')}=#{CGI.escape row.value}" %> (<%= row.count %>)
+						<% else %>
+							<b><%= row.value %></b> (<%= link_to "remove", "#{current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
+						<% end %>
+					</li>
+
+			<% end %>
+		</ul>
+	<% else %>
+		<li class='facet-header'> 
+			<b><%= f[:name] %>:</b> <%= @search.facet(f[:sym]).rows[0].value %> (<%= link_to "remove", "#{current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
+		</li>
+	<% end %> 
+<% end %>
