--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,6 +68,27 @@ p {
 
                                                                         /* header */
 
+.navbar-inner {
+  min-height: 32px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #172237;
+  background-image: -moz-linear-gradient(top, #1c2a43, #101826);
+  background-image: -ms-linear-gradient(top, #1c2a43, #101826);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1c2a43), to(#101826));
+  background-image: -webkit-linear-gradient(top, #1c2a43, #101826);
+  background-image: -o-linear-gradient(top, #1c2a43, #101826);
+  background-image: linear-gradient(top, #1c2a43, #101826);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF1C2A43', endColorstr='#FF101826', GradientType=0);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+}
+
 #logo {
   float: left;
   margin-right: 10px;
